# axum_postgres_crud

./: .env  Cargo.toml  request_tests.http
src/: dao.rs  errors.rs  handlers.rs  main.rs  models.rs  responses.rs  routes.rs  schemas.rs  services.rs  task_repository.rs
