[package]
name = "axum_postgres_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = {version = "1.38.0", features = ["full"]}
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"]}
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
dotenv = "0.15.0"