[package]
name = "axum_postgres_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
dotenv = "0.15.0"
chrono = "0.4.38"
diesel = { version = "2.2.1", features = ["postgres", "serde_json", "r2d2"] }
log = "0.4.22"
#deadpool-diesel = { version = "0.6.1", features = ["postgres"] }